@@ -1,2 +1,4 @@
 config.yml
 tests.*
+log.txt
+err.txt
