@@ -1,4 +1,12 @@
-$: << File.dirname(__FILE__)
+#!/usr/bin/ruby
+BASEDIR = File.dirname(__FILE__)
+$: << BASEDIR
+$stderr.reopen File.join(BASEDIR, "err.txt"), "a"
+$stdout.reopen File.join(BASEDIR, "log.txt"), "a"
+
+puts "-" * 60
+puts Time.new
+
 require 'leekwars'
 
 require 'yaml'
@@ -46,5 +54,3 @@ end
 do_all tokens
 do_register tokens
 
-### http://pastebin.com/czf4XivU
-	
